--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Dr. Spencer Bryngelson
-email: spencer@caltech.edu
-description: Academic webpage of Dr. Spencer H. Bryngelson
+title: Bocong Zheng
+email: bzheng@fraunhofer.org
+description: Academic webpage of Bocong Zheng
 baseurl: ""
 url: ""
 
