--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -6,18 +6,10 @@
   researchgate: https://www.researchgate.net/profile/Bocong_Zheng
   scholar: https://scholar.google.com/citations?user=h1zSWh0AAAAJ&hl=en
   cv: cv/cv.pdf
-  number_educ: 6
-  education1: (2018- ) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
-  education2: (2019) Visiting Researcher, MIT (with <a href="http://sandlab.mit.edu" target="_blank">Themis Sapsis</a>)
-  education3: (2017-8) Postdoctor Researcher <br> <a href="https://xpacc.illinois.edu" target="_blank">XPACC</a> (with <a href="https://viterbi.usc.edu/directory/faculty/Pantano-Rubino/Carlos" target="_blank">Carlos Pantano</a>, <a href="http://acoustics.ae.illinois.edu/" target="_blank">Dan Bodony</a>, <a href="http://jbfreund.mechse.illinois.edu/" target="_blank">Jon Freund</a>)
-  education4: (2017) Ph.D. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign (with <a href="https://aerospace.illinois.edu/directory/profile/jbfreund" target="_blank">Jon Freund</a>)
-  education5: (2015) M.S. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign
-    <br>(with certificate in <a href="https://cse.illinois.edu/" target="_blank">Computational Science & Engineering</a>)
-  education6: (2013) B.S. Mechanical Engineering, B.S. Mathematics<br>
-    University of Michigan-Dearborn
-  education1short: (2018- ) Senior Postdoc, Caltech 
-  education2short: (2019) Visiting Researcher, MIT 
-  education3short: (2017-8) Postdoc, XPACC 
-  education4short: (2017) Ph.D. TAM, UIUC 
-  education5short: (2015) M.S. TAM/CSE, UIUC
-  education6short: (2013) B.S.+B.S, Michigan
+  number_educ: 3
+  education1: (2018- ) Scientist, Fraunhofer USA
+  education2: (2016-7) Postdoctor Researcher <br> (with <a href="https://www.egr.msu.edu/people/profile/qfan" target="_blank">Qi Hua Fan</a>)
+  education3: (2016) Ph.D. Surface Engineering<br> Dalian University of Technology (with <a href="https://aerospace.illinois.edu/directory/profile/jbfreund" target="_blank">Jon Freund</a>)
+  education1short: (2018- ) Scientist, Fraunhofer USA 
+  education2short: (2016-7) Postdoc, MSU 
+  education3short: (2016) Ph.D. SE, DLUT 
