--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ google_analytics: UA-167467135-1
 
 # Footer info
 affiliation: >
-    Dr. Spencer Bryngelson<br/>
-    Senior Postdoctoral Scholar<br/>
-    <a href="http://www.eas.caltech.edu/" target="_blank">Engineering and Applied Science</a><br/>
-    California Institute of Technology
+    Bocong Zheng<br/>
+    Scientist<br/>
+    <a href="https://www.ccd.fraunhofer.org/" target="_blank">Center for Coatings and Diamond Technologies</a><br/>
+    Fraunhofer USA
 
 location: >
-  <a href="http://www.mce.caltech.edu/about/gates_thomas" target="_blank">Gates-Thomas Laboratory</a><br/>
-  California Institute of Technology <br/>
-  1200 E California Blvd<br/>
-  Pasadena, CA 91125, MC104-44
+  Fraunhofer Center for Coatings and Diamond Technologies
+  Michigan State University
+  1449 Engineering Research Ct.<br/>
+  East Lansing, MI 48824
 
 contact: >
-    <a href="mailto:spencer@caltech.edu" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Spencer via email</a> <br/>
+    <a href="mailto:bzheng@fraunhofer.org" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Bocong via email</a> <br/>
     <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
 
 # Pages shown in navbar
