--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ affiliation: >
     Fraunhofer USA
 
 location: >
-  Fraunhofer Center for Coatings and Diamond Technologies<br/>
-  Michigan State University<br/>
+  Fraunhofer Center for Coatings and Diamond Technologies
+  Michigan State University
   1449 Engineering Research Ct.<br/>
   East Lansing, MI 48824
 
 contact: >
     <a href="mailto:bzheng@fraunhofer.org" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Bocong via email</a> <br/>
-#   <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
+    <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
 
 # Pages shown in navbar
 nav_pages:
