--- a/_data/funders.yml
+++ b/_data/funders.yml
@@ -1,10 +1,8 @@
 - image: NSF.png
   url: https://www.nsf.gov/
+- image: MEDC_logo.png
+  url: https://www.michiganbusiness.org/
 - image: doe_logo.png
   url: https://www.energy.gov/
-- image: onr_logo.png
-  url: https://www.onr.navy.mil/
-- image: NIH-logo.png
-  url: https://www.nih.gov/
-- image: nnsa_logo.png
-  url: https://www.energy.gov/nnsa/national-nuclear-security-administration
+- image: AFOSR_logo.png
+  url: https://www.afrl.af.mil/AFOSR/
