--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,17 +1,11 @@
-- date: 22-24 November, 2020
-  headline: "APS Division of Fluid Dynamics"
-  location: Chicago, Illinois USA
+- date: 1-6 May, 2021
+  headline: "64th Annual SVC Technical Conference"
+  location: Nashville, Tennessee USA
 
-- date: 8-12 December, 2020
-  headline: "179th Meeeting of the Acoustical Society of America"
-  location: Chicago, Illinois USA
+- date: 24-29 October, 2021
+  headline: "AVS 67th International Symposium & Exhibition"
+  location: Charlotte, North Carolina USA
 
-
-- date: 9-13 May, 2021
-  headline: "CAV2021: 11th International Symposium on Cavitation"
-  location: Daejeon, Korea
-
-
-- date: 22-27 August, 2021
-  headline: "25th International Congress on Theroretical and Applied Mechanics"
-  location: Milano, Italy 
+- date: 20-25 June, 2021
+  headline: "2021 International Conferences on Plasma Sciences"
+  location: Stateline, Nevada USA
