Comment About Page

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,7 @@
+- date: 17-20 January, 2021
+  headline: "The 8th International Conference on Microelectronics and Plasma Technology"
+  location: Hwaseong, Korea
+
 - date: 1-6 May, 2021
   headline: "64th Annual SVC Technical Conference"
   location: Nashville, Tennessee USA
