--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ contact: >
 
 # Pages shown in navbar
 nav_pages:
-  - name: about
+#  - name: about
   - name: publications
   - name: talks
   - name: research
