--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ contact: >
 
 # Pages shown in navbar
 nav_pages:
-#  - name: about
+  # - name: about
   - name: publications
-  - name: talks
+  # - name: talks
   - name: research
   - name: software
 # - name: team
