--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ contact: >
 nav_pages:
   # - name: about
   - name: publications
-  # - name: talks
+  - name: talks
   - name: research
   - name: software
 # - name: team
