--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,5 +1,5 @@
 - title: "Microplasma formation around microstructure arrays"
-  authors: Yangyang Fu†, Bocong Zheng†, Peng Zhang, Qi Hua Fan, Xinxin Wang, John P. Verboncoeur
+  authors: Yangyang Fu*, Bocong Zheng*, Peng Zhang, Qi Hua Fan, Xinxin Wang, John P. Verboncoeur
   url: fu20apl
   journal: Applied Physics Letters
   image: fu20apl.jpg
@@ -21,7 +21,7 @@
   abstract: ""
 
 - title: "Transition characteristics and electron kinetics in microhollow cathode discharges"
-  authors: Yangyang Fu†, Bocong Zheng†, Peng Zhang, Qi Hua Fan, John P. Verboncoeur
+  authors: Yangyang Fu*, Bocong Zheng*, Peng Zhang, Qi Hua Fan, John P. Verboncoeur
   url: fu20jap
   journal: Journal of Applied Physics
   year: 2021
@@ -34,7 +34,7 @@
     The results provide fundamental insights into MHCD at varying pressure conditions, which could be further beneficial for the design and fabrication of microplasma devices in practical applications."
 
 - title: "Electron dynamics in radio frequency magnetron sputtering argon discharges"
-  authors: Bocong Zheng, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan*
   url: zheng20psst
   journal: Plasma Sources Science and Technology
   image: zheng20psst.jpg
@@ -49,7 +49,7 @@
     The contribution of secondary electrons is negligible under typical RFMS discharge conditions."
 
 - title: "Comparison of 1D and 2D particle-in-cell simulations for DC magnetron sputtering discharges"
-  authors: Bocong Zheng, Yangyang Fu, Keliang Wang, Thanh Tran, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Yangyang Fu, Keliang Wang, Thanh Tran, Thomas Schuelke, Qi Hua Fan*
   url: zheng20pop
   journal: Physics of Plasmas
   year: 2021
@@ -63,7 +63,7 @@
     In terms of capturing the key physical mechanisms in DCMS, one-dimensional PIC simulation is an efficient method, which could largely alleviate the computational expense and preserve the physical fidelity of modeling results."
 
 - title: "Efficient electrophoretic deposition of MXene/reduced graphene oxide flexible electrodes for all-solid-state supercapacitors"
-  authors: Keliang Wang†, Bocong Zheng, Madeline Mackinder, Nina Baule, Elias Garratt, Hong Jin†, Thomas Schuelke, Qi Hua Fan†
+  authors: Keliang Wang*, Bocong Zheng, Madeline Mackinder, Nina Baule, Elias Garratt, Hong Jin*, Thomas Schuelke, Qi Hua Fan*
   url: wang21_effic_elect_depos_mxene_graph
   journal: Journal of Energy Storage
   year: 2021
@@ -79,7 +79,7 @@
     Moreover, the all-solid-state flexible supercapacitors exhibit superior mechanical flexibility under different deformations."
 
 - title: "Similarity law and frequency scaling in low-pressure capacitive radio frequency plasmas"
-  authors: Yangyang Fu†, Bocong Zheng†, De-Qi Wen, Peng Zhang, Qi Hua Fan, John P. Verboncoeur
+  authors: Yangyang Fu*, Bocong Zheng*, De-Qi Wen, Peng Zhang, Qi Hua Fan, John P. Verboncoeur
   url: fu20_simil_law_frequen_scalin_low
   journal: Applied Physics Letters
   year: 2020
@@ -93,7 +93,7 @@
     Electron kinetic invariance is illustrated for the SL and f-scaling being valid, respectively, whereas the electron kinetic variation is observed when the f-scaling is violated."
 
 - title: "Similarity of capacitive radio-frequency discharges in nonlocal regimes"
-  authors: Yangyang Fu†, Bocong Zheng, Peng Zhang, Qi Hua Fan, John P. Verboncoeur, Xinxin Wang
+  authors: Yangyang Fu*, Bocong Zheng, Peng Zhang, Qi Hua Fan, John P. Verboncoeur, Xinxin Wang
   url: fu20_simil_capac_radio_frequen_disch_nonloc_regim
   journal: Physics of Plasmas
   year: 2020
@@ -107,7 +107,7 @@
     The results explicitly validate the scaling laws in nonlocal kinetic regimes, indicating promising application potentials of the similarity transformations across a wide range of kinetic regimes."
 
 - title: "High-energy ballistic electrons in low-pressure radio-frequency plasmas"
-  authors: Yangyang Fu†, Bocong Zheng, De-Qi Wen, Peng Zhang, Qi Hua Fan, John P. Verboncoeur
+  authors: Yangyang Fu*, Bocong Zheng, De-Qi Wen, Peng Zhang, Qi Hua Fan, John P Verboncoeur
   url: fu20_high_energ_ballis_elect_low
   journal: Plasma Sources Science and Technology
   year: 2020
@@ -121,7 +121,7 @@
     With a pronounced presence of HEBEs, the overall impacts of the secondary electron emission on discharge parameters, such as electron power absorption and ionization rate, are also illustrated."
 
 - title: "Influence of metastable atoms in low pressure magnetized radio-frequency argon discharges"
-  authors: Bocong Zheng, Yangyang Fu, De-Qi Wen, Keliang Wang, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Yangyang Fu, De-Qi Wen, Keliang Wang, Thomas Schuelke, Qi Hua Fan*
   url: zheng20_influen_metas_atoms_low_press
   journal: Journal of Physics D Applied Physics
   year: 2020
@@ -172,7 +172,7 @@
     The interfacial density per unit volume is therefore increased, and leading to more interface scattering of the phonons in the heat transport progress, which is the key parameter in determining thermal conductivity of Ti-Al-Si-N nanocomposite coatings."
 
 - title: "Magnetic field enhanced cold plasma sterilization"
-  authors: Madeline A. Mackinder, Keliang Wang, Bocong Zheng, Maheshwar Shrestha, Qi Hua Fan†
+  authors: Madeline A. Mackinder, Keliang Wang, Bocong Zheng, Maheshwar Shrestha, Qi Hua Fan*
   url: mackinder19_magnet_field_enhan_cold_plasm_steril
   journal: Clinical Plasma Medicine
   year: 2020
@@ -188,7 +188,7 @@
     A process gas pressure of 100 mTorr presents the most effective treatment with a sterilization time less than one minute and sample temperature below 32 °C."
 
 - title: "Reduction of capacitive coupling in inductively coupled plasmas by solenoid coils on dielectric window"
-  authors: Bocong Zheng, Maheshwar Shrestha, Keliang Wang, Thomas Schuelke, Evgeny Shun’ko, Veniamin Belkin, Qi Hua Fan†
+  authors: Bocong Zheng, Maheshwar Shrestha, Keliang Wang, Thomas Schuelke, Evgeny Shun’ko, Veniamin Belkin, Qi Hua Fan*
   url: zheng19_reduc_capac_coupl_induc_coupl
   journal: Journal of Applied Physics
   year: 2019
@@ -203,7 +203,7 @@
     The voltage drop on the dielectric window under the solenoid coil was significantly reduced, which was attributed to a potential shielding effect of the grounded end of the radio frequency coil."
 
 - title: "Enhancement of ohmic heating by hall current in magnetized capacitively coupled discharges"
-  authors: Bocong Zheng, Keliang Wang, Timothy Grotjohn, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Keliang Wang, Timothy Grotjohn, Thomas Schuelke, Qi Hua Fan*
   url: zheng19_enhan_ohmic_heatin_by_hall
   journal: Plasma Sources Science and Technology
   year: 2019
@@ -216,7 +216,7 @@
     The Ohmic heating induced by the Hall current can be well approximated from the Ohmic heating of unmagnetized capacitively coupled discharges."
 
 - title: "Understanding the chemical reactions in cathodic plasma electrolysis"
-  authors: Bocong Zheng, Keliang Wang, Maheshwar Shrestha, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Keliang Wang, Maheshwar Shrestha, Thomas Schuelke, Qi Hua Fan*
   url: zheng19_under_chemic_react_cathod_plasm_elect
   journal: Plasma Sources Science and Technology
   year: 2019
@@ -232,7 +232,7 @@
     The formation of textured surface is attributed to the anisotropic chemical etching by the reactive species generated in the plasmas."
 
 - title: "Graphene wrapped mxene via plasma exfoliation for all-solid-state flexible supercapacitors"
-  authors: Keliang Wang†, Bocong Zheng, Madeline A. Mackinder, Nina Baule, Hui Qiao, Hong Jin, Thomas Schuelke, and Qi Hua Fan
+  authors: Keliang Wang*, Bocong Zheng, Madeline A. Mackinder, Nina Baule, Hui Qiao, Hong Jin, Thomas Schuelke, and Qi Hua Fan
   url: wang19_graph_wrapp_mxene_via_plasm
   journal: Energy Storage Materials
   year: 2019
@@ -249,7 +249,7 @@
     This research has the potential to lead to the development of new electrode materials that significantly promote the capacity of energy storage."
 
 - title: "Hollow cathode effect modified time-dependent global model and high-power impulse magnetron sputtering discharge and transport in cylindrical cathode"
-  authors: Suihan Cui, Zhongzhen Wu†, Hai Lin, Shu Xiao, Bocong Zheng, Liangliang Liu, Xiaokai An, Ricky K. Y. Fu, Xiubo Tian, Wenchang Tan, Paul K. Chu
+  authors: Suihan Cui, Zhongzhen Wu*, Hai Lin, Shu Xiao, Bocong Zheng, Liangliang Liu, Xiaokai An, Ricky K. Y. Fu, Xiubo Tian, Wenchang Tan, Paul K. Chu
   url: cui19_hollow_cathod_effec_modif_time
   journal: Journal of Applied Physics
   year: 2019
@@ -286,7 +286,7 @@
     The flexible and hard TiAlSiN nanocomposite coatings were deposited by MPPMS at higher peak power."
 
 - title: "Discharge and deposition characteristics of high-power impulse magnetron sputtering using various target materials"
-  authors: Bocong Zheng, Zhili Wu†, Suihan Cui, Shu Xiao, Liangliang Liu, Hai Lin, Ricky K. Y. Fu, Xiubo Tian, Feng Pan†, P. K. Chu
+  authors: Bocong Zheng, Zhili Wu, Suihan Cui, Shu Xiao, Liangliang Liu, Hai Lin, Ricky K. Y. Fu, Xiubo Tian, Feng Pan†, P. K. Chu
   url: zheng19_disch_depos_charac_high_power
   journal: IEEE Transactions on Plasma Science
   year: 2019
@@ -300,7 +300,7 @@
     For some high-sputtering yield materials, such as Cu and Cr, this fraction can be up to 95%."
 
 - title: "Magnetically enhanced plasma exfoliation of polyaniline-modified graphene for flexible solid-state supercapacitors"
-  authors: Keliang Wang†, Bocong Zheng, Maheshwar Shrestha, Thomas Schuelke, Qi Hua Fan†
+  authors: Keliang Wang*, Bocong Zheng, Maheshwar Shrestha, Thomas Schuelke, Qi Hua Fan*
   url: wang18_magnet_enhan_plasm_exfol_polyan
   journal: Energy Storage Materials
   year: 2018
@@ -314,7 +314,7 @@
     The magnetically enhanced plasma exfoliation of graphite oxide offers a potentially cost-effective approach to producing high-quality carbon nanomaterials for energy storage."
 
 - title: "Acoustic standing wave modulation of capacitively coupled plasmas"
-  authors: Bocong Zheng, Thomas Schuelke, Qi Hua Fan†
+  authors: Bocong Zheng, Thomas Schuelke, Qi Hua Fan*
   url: zheng18_acous_stand_wave_modul_capac_coupl_plasm
   journal: Journal of Physics D Applied Physics
   year: 2018
@@ -332,7 +332,7 @@
     Using acoustic waves to modulate plasmas has the potential to create many new applications and promote plasma-materials interactions."
 
 - title: "Comparative study of furnace and flash lamp annealed silicon thin films grown by plasma enhanced chemical vapor deposition"
-  authors: Maheshwar Shrestha, Keliang Wang, Bocong Zheng, Laura Mokrzycki, and Qi Hua Fan†
+  authors: Maheshwar Shrestha, Keliang Wang, Bocong Zheng, Laura Mokrzycki, and Qi Hua Fan*
   url: shrestha18_compar_study_furnac_flash_lamp
   journal: Coatings
   year: 2018
@@ -350,7 +350,7 @@
     The flash lamp annealed film was better crystallized with rougher surface compared to furnace annealed ones."
 
 - title: "Electrophoretic deposition of activated carbon yp-50 with ethyl cellulose binders for supercapacitor electrodes"
-  authors: Maheshwar Shrestha, Ishop Amatya, Keliang Wang, Bocong Zheng, Zhengrong Gu, Qi Hua Fan†
+  authors: Maheshwar Shrestha, Ishop Amatya, Keliang Wang, Bocong Zheng, Zhengrong Gu, Qi Hua Fan*
   url: shrestha17_elect_depos_activ_carbon_yp
   journal: Journal of Energy Storage
   year: 2017
@@ -366,7 +366,7 @@
     This work demonstrates that electrophoretic deposition has the potential to replace the conventional hydraulic press method in manufacturing supercapacitors that use sustainable and environmentally friendly biochar."
 
 - title: "Liquid sensors based on enhanced fabry-perot etalons"
-  authors: Nezam Uddin, Maheshwar Shrestha, Bocong Zheng, Hyeun-Joong Yoon, Xiuqing Wang, Qi Hua Fan†
+  authors: Nezam Uddin, Maheshwar Shrestha, Bocong Zheng, Hyeun-Joong Yoon, Xiuqing Wang, Qi Hua Fan*
   url: uddin17_liquid_sensor_based_enhan_fabry_perot_etalon
   journal: IEEE Sensors Journal
   year: 2017
@@ -447,7 +447,7 @@
     The results suggest that the cylindric sputtering source can be effectively used to conduct HiPIMS and is a novel way to improve and promote the application of HiPIMS."
 
 - title: "On the pressure effect in energetic deposition of cu thin films by modulated pulsed power magnetron sputtering: A global plasma model and experiments"
-  authors: Bocong Zheng, Di Meng, Honglong Che, Mingkai Lei†
+  authors: Bocong Zheng, Di Meng, Honglong Che, Mingkai Lei*
   url: zheng15_press_effec_energ_depos_cu
   journal: Journal of Applied Physics
   year: 2015
@@ -463,7 +463,7 @@
     The results contribute to the understanding of the characteristics of MPPMS discharges, as well as its correlation with the microstructure and texture of deposited Cu thin films."
 
 - title: "Nitrogen mass transfer models for plasma-based low-energy ion implantation"
-  authors: Bocong Zheng, Kesheng Wang, Zhipeng Zhang, Honglong Che, Mingkai Lei†
+  authors: Bocong Zheng, Kesheng Wang, Zhipeng Zhang, Honglong Che, Mingkai Lei*
   url: zheng15_nitrog_mass_trans_model_plasm
   journal: Journal of Vacuum Science and Technology A
   year: 2015
@@ -479,7 +479,7 @@
     Under an average implantation current density of 0.3–0.6 mA/cm2, the surface nitrogen concentration in the range from 18.5 to 29 at.% is a critical factor for the nitrogen transport in the AISI 304 austenitic stainless steel by PBLEII, which accelerates the implanted nitrogen diffusion inward up to 6–12 um during a nitriding time of 4 h."
 
 - title: "Nonuniform plasma diffusion and multi-pulse effect in plasma-based ion implantation"
-  authors: Bocong Zheng, Mingkai Lei†
+  authors: Bocong Zheng, Mingkai Lei*
   url: zheng15_nonun_plasm_diffus_multi_pulse
   journal: Nuclear Instruments and Methods in Physics Research Section B Beam Interactions with Materials and Atoms
   year: 2015
@@ -496,7 +496,7 @@
     The results reported here help to provide a theoretical guidance for the parameters optimization in PBII process."
 
 - title: "Modeling of inner surface modification of a cylindrical tube by plasma-based low-energy ion implantation"
-  authors: Bocong Zheng, Kesheng Wang, Mingkai Lei†
+  authors: Bocong Zheng, Kesheng Wang, Mingkai Lei*
   url: zheng15_model_inner_surfac_modif_cylin
   journal: Plasma Science and Technology
   year: 2015
@@ -514,7 +514,7 @@
     Therefore, a comparatively uniform surface modification by the low-energy nitrogen ion implantation is achieved along the cylindrical tube on both the inner and outer surfaces."
 
 - title: "Plasma low-pressure nonsteady diffusion fluid model for pulsed plasma recovery"
-  authors: Yi Li, Bocong Zheng, Mingkai Lei†
+  authors: Yi Li, Bocong Zheng, Mingkai Lei*
   url: li13_plasm_low_press_nonst_diffus
   journal: IEEE Transactions on Plasma Science
   year: 2013
@@ -532,7 +532,7 @@
     All these results can provide beneficial theoretical guidance for the parameter optimization in the PBII."
 
 - title: "Engineering the tube size for an inner surface modification by plasma-based ion implantation"
-  authors: Yi Li, Bocong Zheng, Mingkai Lei†
+  authors: Yi Li, Bocong Zheng, Mingkai Lei*
   url: li12_engin_tube_size_inner_surfac
   journal: Vaccum
   year: 2012
