--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -1,5 +1,5 @@
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
-  title: <a href="{{ site.url }}{{ site.baseurl }}/talks/zheng21_icmap.pdf" target="_blank">Electron dynamics in magnetron sputtering discharges</a>
+  title: <a talks/zheng21_icmap.pdf" target="_blank">Electron dynamics in magnetron sputtering discharges</a>
   conf: The 8th International Conference on Microelectronics and Plasma Technology
   year: 2021
 
