Update magnetron research

--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -8,8 +8,8 @@
   cv: cv/cv.pdf
   number_educ: 3
   education1: (2018- ) Scientist, Fraunhofer USA
-  education2: (2016-7) Postdoc, Michigan State University
+  education2: (2017) Postdoc, Michigan State University
   education3: (2016) Ph.D. Surface Engineering, Dalian University of Technology
   education1short: (2018- ) Scientist, Fraunhofer USA 
-  education2short: (2016-7) Postdoc, MSU 
+  education2short: (2017) Postdoc, MSU 
   education3short: (2016) Ph.D. SE, DLUT 
