--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,15 @@
+- title: "Enhanced capacitance and desalination performance with plasma activated biochar electrodes"
+  authors: Keliang Wang†, Bocong Zheng, Junwoo Lee, Madeline Mackinder, Hong Jin†, Thomas Schuelke, Qi Hua Fan†
+  url: wang21jece
+  journal: Journal of Environmental Chemical Engineering
+  image: wang21jece.jpg
+  abstract: "Derived from electric double layer capacitors (EDLCs), capacitive deionization (CDI) using symmetric carbon-based electrodes is an emerging approach to purifying brackish water into drinking water.
+    The deionization performance is mainly determined by the properties of the electrode materials.
+    This work reports a green and efficient plasma treatment for activating raw biochar, which is subsequently used as the electrode material for both EDLCs and CDI.
+    Oxygen plasma activation effectively modulates the surface charge, morphology, and functional groups.
+    Biochar treated with oxygen plasma exhibits pronounced improvement in supercapacitor specific capacitance from 80 to 97.5 F g -1 , and 1.2 times higher desalination capacity in comparison with the raw biochar.
+    Plasma activation can be an effective strategy to improving the capacitance and deionization performance of biochar."
+
 - title: "Microplasma formation around microstructure arrays"
   authors: Yangyang Fu†, Bocong Zheng†, Peng Zhang, Qi Hua Fan, Xinxin Wang, John P. Verboncoeur
   url: fu20apl
