--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ google_analytics: UA-167467135-1
 affiliation: >
     Bocong Zheng<br/>
     Scientist<br/>
-    <a href="https://www.ccd.fraunhofer.org/" target="_blank">Center for Coatings and Diamond Technologies</a><br/>
+    <a href="https://www.ccd.fraunhofer.org/" target="_blank">Center Midwest</a><br/>
     Fraunhofer USA
 
 location: >
-  Fraunhofer Center for Coatings and Diamond Technologies<br/>
+  Fraunhofer USA Center Midwest<br/>
   Michigan State University<br/>
   1449 Engineering Research Ct.<br/>
   East Lansing, MI 48824
