--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,5 @@
+- date: 8 January, 2021
+  headline: "Paper on electron kinetics in microhollow cathode discharges <a href='https://doi.org/10.1063/5.0033282' target='_blank'>was published by JAP<a> after revision. Check it out!"
+
 - date: 16 November, 2020
   headline: "Paper on similarity law in CCP discharges <a href='https://doi.org/10.1063/5.0029518' target='_blank'>was published by APL<a> after revision. Check it out!"
