--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 13 January, 2021
+  headline: "Paper on comparison of 1D and 2D magnetron discharges <a href='https://doi.org/10.1063/5.0029353' target='_blank'>was published by POP<a> after revision. Check it out!"
+
 - date: 8 January, 2021
   headline: "Paper on electron kinetics in microhollow cathode discharges <a href='https://doi.org/10.1063/5.0033282' target='_blank'>was published by JAP<a> after revision. Check it out!"
 
