--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ""
 
 
 # Google analytics ID: Remove or use your own!
-google_analytics: UA-167467135-1
+google_analytics: G-RYHKRMJ7MX
 
 # Footer info
 affiliation: >
