back to tracking id

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ""
 
 
 # Google analytics ID: Remove or use your own!
-google_analytics: G-DV8HTR58Y1
+google_analytics: UA-187518795-1
 
 # Footer info
 affiliation: >
