--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -11,5 +11,5 @@
   education2: (2017) Postdoc, Michigan State University
   education3: (2016) Ph.D. Surface Engineering, Dalian University of Technology
   education1short: (2018- ) Scientist, Fraunhofer USA 
-  education2short: (2017) Postdoc, MSU 
-  education3short: (2016) Ph.D. SE, DLUT 
+  education2short: (2017) Postdoc, Michigan State University
+  education3short: (2016) Ph.D., Dalian University of Technology
