--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -2,6 +2,11 @@
   title: <a href="https://bczheng.com/talks/zheng21_icmap.pdf" target="_blank">Electron dynamics in magnetron sputtering discharges</a>
   conf: The 8th International Conference on Microelectronics and Plasma Technology
   year: 2021
+  
+- authors: Yangyang Fu*, Bocong Zheng, Peng Zhang, Qi Hua Fan, and John P. Verboncoeur
+  title: Similarity Laws for Low-Temperature Plasmas from Continuum to Kinetic Regimes
+  conf: The 8th International Conference on Microelectronics and Plasma Technology
+  year: 2021
 
 - authors: Yangyang Fu*, Bocong Zheng, De-Qi Wen, Peng Zhang, Qi Hua Fan, John P Verboncoeur
   title: High-energy ballistic electrons in low-pressure radio-frequency plasmas
