--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,6 @@
-- date: 17-20 January, 2021
-  headline: "The 8th International Conference on Microelectronics and Plasma Technology"
-  location: Hwaseong, Korea
+- date: 25-30 April, 2021
+  headline: "47th International Conference on Metallurgical Coatings and Thin Films"
+  location: San Diego, CA, USA
 
 - date: 1-6 May, 2021
   headline: "64th Annual SVC Technical Conference"
