--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -1,4 +1,9 @@
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
+  title: <a href="https://bczheng.com/talks/zheng21_SVC.pdf" target="_blank">One-dimensional PIC/MCC simulation of HiPIMS discharges</a>
+  conf: 64th Annual SVC Technical Conference
+  year: 2021
+  
+- authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
   title: <a href="https://bczheng.com/talks/zheng21_icmap.pdf" target="_blank">Electron dynamics in magnetron sputtering discharges</a>
   conf: The 8th International Conference on Microelectronics and Plasma Technology
   year: 2021
