Update talk name

--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -1,5 +1,5 @@
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
-  title: <a href="https://bczheng.com/talks/zheng21_SVC.pdf" target="_blank">One-dimensional PIC/MCC simulation of HiPIMS discharges</a>
+  title: <a href="https://bczheng.com/talks/Zheng21_SVC.pdf" target="_blank">One-dimensional PIC/MCC simulation of HiPIMS discharges</a>
   conf: 64th Annual SVC Technical Conference
   year: 2021
   
