--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -48,11 +48,12 @@
 
 - title: "Electron dynamics in radio frequency magnetron sputtering argon discharges with a dielectric target"
   authors: Bocong Zheng, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan†
-  url: zheng20psst
+  url: zheng21_elect_dynam_radio_frequen_magnet
   journal: Plasma Sources Science and Technology
   year: 2021
-  info: in press
-  image: zheng20psst.jpg
+  info: 30, 035019
+  doi: 10.1088/1361-6595/abe9f9
+  image: zheng21_elect_dynam_radio_frequen_magnet.jpg
   abstract: "We demonstrate a self-consistent and complete description of electron dynamics in a typical electropositive radio frequency magnetron sputtering (RFMS) argon discharge.
     The electron dynamics, including the electron power absorption dynamics in one radio frequency (RF) period, is studied via a fully kinetic 2d3v particle-in-cell/Monte Carlo collision (PIC/MCC) electrostatic simulation.
     The interplay between the fundamental plasma parameters is analyzed through their spatiotemporal dynamics.
