--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -4,7 +4,7 @@
   year: 2021
 
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
-  title: <a href="https://bczheng.com/talks/zheng21_PlasmaTech.pdf" target="_blank">Kinetic investigation of electron energization in magnetron discharges: RFMS, DCMS, and HiPIMS</a>
+  title: <a href="https://bczheng.com/talks/zheng21_PlasmaTech.pdf" target="_blank">Kinetic investigation of electron energization in magnetron discharges RFMS, DCMS, and HiPIMS</a>
   conf: Plasma Processing and Technology International Conference (Plasma Tech 2021)
   year: 2021
   
