--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -14,6 +14,8 @@
   authors: Yangyang Fu†, Huihui Wang, Bocong Zheng†, Peng Zhang, Qi Hua Fan, Xinxin Wang, John P. Verboncoeur
   url: fu20apl
   journal: Applied Physics Letters
+  year: 2021
+  info: in press
   image: fu20apl.jpg
   abstract: "We demonstrate the formation and transition behaviors of a microplasma around microstructure arrays at different gas pressures via two-dimensional particle-in-cell/Monte Carlo collision (2d3v) simulations.
     It is found that the microdischarge occurs outside the cathode microcavities at the lowest pressure while starts penetrating the microcavities with a curved sheath edge as the pressure increases.
