Add fu21apl pdf

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 14 April, 2021
+  headline: "Paper on DC microplasma <a href='https://bczheng.com/papers/fu21apl.pdf' target='_blank'>was accepted by APL<a> after revision. Check it out!"
+
+- date: 1 April, 2021
+  headline: "Paper on electron dynamics in RF magnetron discharges <a href='https://doi.org/10.1088/1361-6595/abe9f9' target='_blank'>was published by PSST<a> after revision. Check it out!"
+
 - date: 13 January, 2021
   headline: "Paper on comparison of 1D and 2D magnetron discharges <a href='https://doi.org/10.1063/5.0029353' target='_blank'>was published by POP<a> after revision. Check it out!"
 
