--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -10,9 +10,9 @@
     Biochar treated with oxygen plasma exhibits pronounced improvement in supercapacitor specific capacitance from 80 to 97.5 F g -1 , and 1.2 times higher desalination capacity in comparison with the raw biochar.
     Plasma activation can be an effective strategy to improving the capacitance and deionization performance of biochar."
 
-- title: "Microplasma formation around microstructure arrays"
+- title: "Direct current microplasma formation around microstructure arrays"
   authors: Yangyang Fu†, Huihui Wang, Bocong Zheng†, Peng Zhang, Qi Hua Fan, Xinxin Wang, John P. Verboncoeur
-  url: fu20apl
+  url: fu21apl
   journal: Applied Physics Letters
   year: 2021
   info: in press
