--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,1 +1,1 @@
-- name: "Co-PI: Developing an Efficient Computation Scheme for Modeling Low-Pressure Plasmas, Funded by National Science Foundation (NSF), $250,000, in collaboration with MSU"
+# - name: "Co-PI: Developing an Efficient Computation Scheme for Modeling Low-Pressure Plasmas, Funded by National Science Foundation (NSF), $250,000, in collaboration with MSU"
