--- a/_data/collaborators.yml
+++ b/_data/collaborators.yml
@@ -1,3 +1,3 @@
-- name: Dr. Yangyang Fu
-  title: CMCE, Michigan State University
-  url: "https://www.egr.msu.edu/~fuyangya/"
+# - name: Dr. Yangyang Fu
+#   title: CMCE, Michigan State University
+#   url: "https://www.egr.msu.edu/~fuyangya/"
