--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,20 @@ url: ""
 google_analytics: UA-187518795-1
 
 # Footer info
-affiliation: >
-    Bocong Zheng<br/>
-    Scientist<br/>
-    <a href="https://www.ccd.fraunhofer.org/" target="_blank">Center Midwest</a><br/>
-    Fraunhofer USA
+# affiliation: >
+#     Bocong Zheng<br/>
+#     Scientist<br/>
+#     <a href="https://www.ccd.fraunhofer.org/" target="_blank">Center Midwest</a><br/>
+#     Fraunhofer USA
 
-location: >
-  Fraunhofer USA Center Midwest<br/>
-  Michigan State University<br/>
-  1449 Engineering Research Ct.<br/>
-  East Lansing, MI 48824
+# location: >
+#   Fraunhofer USA Center Midwest<br/>
+#   Michigan State University<br/>
+#   1449 Engineering Research Ct.<br/>
+#   East Lansing, MI 48824
 
 contact: >
-    <a href="mailto:bzheng@fraunhofer.org" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Bocong via email</a> <br/>
+    <a href="mailto:bcong.zheng@gmail.com" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Bocong via email</a> <br/>
 #   <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
 
 # Pages shown in navbar
@@ -32,7 +32,7 @@ nav_pages:
   - name: publications
   - name: talks
   - name: research
-  - name: software
+  # - name: software
 # - name: team
 # - name: teaching
 
