--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bocong Zheng
-email: bzheng@fraunhofer.org
-description: Academic webpage of Bocong Zheng
+email: bcong.zheng@gmail.com
+description: Academic page of Bocong Zheng
 baseurl: ""
 url: ""
 
